[package]
name = "sandbox"
version = "1.0.0"
edition = "2024"
license = "AGPL-3.0"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
# external
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.69"
wasm-bindgen = "0.2.92"
# needed to enable the "js" feature for compatibility with wasm,
# see https://docs.rs/getrandom/#webassembly-support
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"

# workspace
ts-macro = { path = "../ts-macro" }
ts-type = { path = "../ts-type" }
utils-core = { path = "../utils-core" }
