[package]
name = "ts-macro"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Generate TypeScript interface bindings from a Rust struct."
authors = ["Ryan Goree"]
readme = "README.md"
repository = "https://github.com/ryangoree/wasm-utils-rs"

[lib]
proc-macro = true

[dependencies]
# external
heck = "0.5.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
wasm-bindgen = "0.2.92"

# workspace
ts-type = { path = "../ts-type", version = "1.0.0" }
