[package]
name = "ts-macro"
description = "Attribute macro for generating TypeScript interfaces in wasm-bindgen projects."
version = "1.0.1"
edition = "2024"
license = "Apache-2.0"
authors = ["Ryan Goree <goree.ryan@gmail.com>"]
repository = "https://github.com/ryangoree/wasm-utils-rs"
categories = [
  "wasm",
  "web-programming",
  "api-bindings",
  "development-tools::ffi",
  "compilers",
]
keywords = ["wasm-bindgen", "typescript", "bindings", "webassembly"]

[lib]
proc-macro = true

[dependencies]
# external
heck = "0.5.0"
quote = "1.0.40"
syn = { version = "1.0", features = ["full"] }
wasm-bindgen = "0.2.92"

# workspace
ts-type = { path = "../ts-type", version = "1.0.1" }
